added /api/logout
